# amplifier-app-transcribe

./: .env.example  .gitignore  DESIGN_NOTES.md  HOW_THIS_APP_WAS_MADE.md  MIGRATION_NOTES.md  Makefile  README.md  pyproject.toml  pytest.ini
.data/transcribe/20251022_204530/: state.json
.data/transcribe/20251022_204604/: state.json
.data/transcribe/20251022_225442/: state.json
.streamlit/: config.toml
src/amplifier_app_transcribe/: __init__.py  __main__.py  _web_app.py  cli.py  formatter.py  insights.py  pipeline.py  state.py  storage.py  web.py
tests/: test_formatter.py  test_pipeline_callbacks.py  test_state.py  test_web.py
