[project]
name = "amplifier-app-transcribe"
version = "0.1.0"
description = "Turn videos into searchable transcripts with AI-powered insights"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Microsoft Corporation"}
]
keywords = ["transcription", "whisper", "youtube", "ai", "audio", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
]

[project.scripts]
transcribe = "amplifier_app_transcribe.cli:cli"

[project.urls]
Homepage = "https://github.com/robotdad/amplifier-app-transcribe"
Documentation = "https://github.com/robotdad/amplifier-app-transcribe#readme"
Repository = "https://github.com/robotdad/amplifier-app-transcribe"
Issues = "https://github.com/robotdad/amplifier-app-transcribe/issues"

[tool.uv.sources]
amplifier-module-tool-whisper = {git = "https://github.com/robotdad/amplifier-module-tool-whisper", branch = "main"}
amplifier-module-tool-youtube-dl = {git = "https://github.com/robotdad/amplifier-module-tool-youtube-dl", branch = "main"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_transcribe"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
